# gh-prism

./: .gitignore  .versionrc  Cargo.toml  README.md  build.rs  dprint.json  flake.nix
.github/scripts/: generate-changelog.sh
.github/workflows/: ci.yml  draft-release.yml  publish.yml  release.yml
script/: build.sh
src/: app.rs  github.rs  main.rs
src/app/: editor.rs  handler.rs  helpers.rs  markdown.rs  media.rs  navigation.rs  render.rs  style.rs  types.rs
src/git/: diff.rs
src/github/: cache.rs  client.rs  comments.rs  commits.rs  files.rs  media.rs  pr.rs  review.rs
