[package]
name = "gh-prism"
version = "0.0.1"
edition = "2024"
authors = ["kawarimidoll"]
description = "gh extension TUI for reviewing GitHub Pull Requests"
license = "MIT"
repository = "https://github.com/kawarimidoll/gh-prism"

[dependencies]
clap = { version = "4.5.55", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.29.0"
