[package]
name = "gh-prism"
version = "0.0.1"
edition = "2024"
authors = ["kawarimidoll"]
description = "gh extension TUI for reviewing GitHub Pull Requests"
license = "MIT"
repository = "https://github.com/kawarimidoll/gh-prism"

[dependencies]
ansi-to-tui = "7"
clap = { version = "4.5.55", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
octocrab = "0.49.5"
ratatui = "0.29.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
