[package]
name = "gh-prism"
version = "0.0.1"
edition = "2024"
authors = ["kawarimidoll"]
description = "gh extension TUI for reviewing GitHub Pull Requests"
license = "MIT"
repository = "https://github.com/kawarimidoll/gh-prism"

[dependencies]
ansi-to-tui = "8"
clap = { version = "4.5.55", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
futures = "0.3.31"
octocrab = "0.49.5"
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
termbg = "0.6"
tokio = { version = "1.49.0", features = ["full"] }
tui-markdown = { version = "0.3", default-features = false }
unicode-width = "0.2"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
mod_module_files = "deny"
